# MathScribe---Backend

./: .dockerignore  .env.example  .gitattributes  .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  pyproject.toml  render.yaml  requirements.txt
.github/workflows/: ci.yml
app/: __init__.py  main.py
app/api/v1/: router.py
app/core/: config.py  metrics.py
app/db/: base.py  session.py
app/models/: __init__.py  conversion.py  user.py
app/schemas/: recognition.py  solve.py  user.py
docs/: technical-document.md
docs/design/: bpmn.md  c4-architecture.md  cloud-native.md  prompting-strategy.md
docs/devops/: despliegue-y-permisos.md  evidencias.md
docs/devops/capturas/: README.md
docs/product/: cost-analysis.md  problem-definition.md  user-stories.md
docs/responsible-ai/: responsible-ai.md
docs/scrum/: definition-of-done.md  sprint-01-review-retro.md  sprint-02-planning.md  sprint-02-review-retro.md  sprint-03-planning.md
infra/: docker-compose.yml
services/: __init__.py
services/llm/: __init__.py  gemini_client.py
services/recognition/: base.py  preprocessing.py  service.py
services/recognition/providers/: gemini.py  mathpix.py  openai_vision.py
services/solver/: explainer.py  service.py  sympy_solver.py
shared/: __init__.py  types.py
tests/: test_auth.py  test_config.py  test_explainer.py  test_gemini_client.py  test_gemini_provider.py  test_health.py  test_history.py  test_metrics.py  test_modelos_y_tipos.py  test_preprocessing.py  test_recognition.py  test_recognition_service.py  test_solve.py  test_sympy_solver.py
(+5 files in other folders)
