[project]
name = "mathscribe-backend"
version = "0.1.0"
description = "API REST y capa de inteligencia de MathScribe (imagen → LaTeX, resolución y explicación)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Daniel Rojas Barreneche" }]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B"]

[tool.ruff.lint.flake8-bugbear]
# Las dependencias de FastAPI se declaran como valores por defecto de los
# argumentos; no son mutables ni tienen efectos secundarios (no aplica B008).
extend-immutable-calls = [
    "fastapi.File",
    "fastapi.Form",
    "fastapi.Body",
    "fastapi.Query",
    "fastapi.Path",
    "fastapi.Header",
    "fastapi.Cookie",
    "fastapi.Depends",
    "fastapi.Security",
]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
